src/snapshots/shilling__config__tests__empty_bot_id.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    EmptyField(
        "bot_id",
    ),
)
