src/snapshots/shilling__config__tests__invalid_base_url.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    InvalidBaseUrl(
        RelativeUrlWithoutBase,
    ),
)
