src/snapshots/shilling__config__tests__limit_zero.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    InvalidGetUpdatesLimit(
        0,
    ),
)
