src/snapshots/shilling__config__tests__timeout_above_max.snap
---
source: src/config.rs
expression: builder.build()
---
Err(
    InvalidGetUpdatesTimeout(
        51,
    ),
)
