src/snapshots/shilling__config__tests__valid_defaults.snap
---
source: src/config.rs
expression: builder.build()
---
Ok(
    Config {
        url: "https://api.telegram.org/12345:REDACTED/",
        get_updates_timeout: 50,
        get_updates_limit: 100,
        allowed_updates: [
            "message",
            "edited_message",
            "callback_query",
        ],
    },
)
