src/snapshots/shilling__config__tests__valid_full.snap
---
source: src/config.rs
expression: builder.build()
---
Ok(
    Config {
        url: "https://example.com/12345:REDACTED/",
        get_updates_timeout: 30,
        get_updates_limit: 50,
        allowed_updates: [
            "message",
            "callback_query",
        ],
    },
)
